fix(ffe-context-message): use `break-all` to wrap words

--- a/packages/ffe-context-message/less/context-message.less
+++ b/packages/ffe-context-message/less/context-message.less
@@ -58,7 +58,7 @@
     .ffe-small-text,
     .ffe-link-text,
     &__header {
-        word-break: break-word;
+        word-break: break-all;
         hyphens: auto;
     }
 
